@@ -209,6 +209,9 @@ CREATE TABLE `tl_iso_config` (
   `currencyPosition` varchar(5) NOT NULL default '',
   `currencySymbol` char(1) NOT NULL default '',
   `currencySpace` char(1) NOT NULL default '',
+  `currencyAutomator` char(1) NOT NULL default '',
+  `currencyOrigin` varchar(3) NOT NULL default '',
+  `currencyProvider` varchar(32) NOT NULL default '',
   `orderPrefix` varchar(5) NOT NULL default '',
   `orderDigits` int(1) unsigned NOT NULL default '4',
   `templateGroup` varchar(255) NOT NULL default '',
