@@ -21,6 +21,7 @@ Version 1.3.rc1 (2011-??-??)
 - Added new function IsotopeFrontend::generateRowClass() to add useful CSS classes to any array
 - Added "empty message" option to cart module (#2197)
 - Added indexing of products for the Contao search module (#2105)
+- Added automatic currency conversion routines (including Hooks for data providers)
 - Improved: loading products is now centralized in IsotopeFrontend static functions
 - Improved: "Loading product data" is now in the language file (#2215)
 - Improved: Removed size and added maxlength attribute to quantity input fields (#2118)
